src/test/lab3/invalid/XX-Fail15.slac
class A {
    method foo(a : Int, ) : retType = {
        12
    }
}

method main() : Unit = { println("42") }
